# MLTradeBot

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml  pyproject.toml  start.sh
bot/: main.py
bot/src/: main.py
docker/: Dockerfile
src/: gmocoin.py
src/application/services/: bot_agent.py  bot_orchestrator.py  lot_allocator.py
src/config/: logging_config.py
src/domain/entities/: candle.py  position.py
src/domain/ports/: exchange_port.py  ohlcv_repository_port.py  signal_generator_port.py  state_repository_port.py
src/entrypoints/: main.py
src/entrypoints/retrain/: data_fetcher.py  label_generator.py  model_evaluator.py  model_trainer.py  retrain_main.py  retrain_pipeline.py
src/infrastructure/feature_engineering/: talib_feature_calculator.py
src/infrastructure/ml/: lightgbm_signal_generator.py
src/infrastructure/persistence/: bitflyer_ohlcv_repository.py  joblib_model_repository.py  pickle_ohlcv_repository.py  pickle_state_repository.py
src/mltradebot/bot/: main.py
src/mltradebot/config/: settings.py
src/mltradebot/training/: binance_data_fetcher.py  (+3 more)
tests/: conftest.py
tests/bot/: conftest.py  test_auth.py  test_bot_agent.py  test_lot_allocator.py  test_maintenance_scheduler.py
tests/training/: test_label_generator.py
tests/unit/: test_bot_agent.py  test_lot_allocator.py  test_maintenance_scheduler.py
training/: data_fetcher.py  main.py  model_evaluator.py  pipeline.py
training/src/: binance_data_fetcher.py  label_generator.py  main.py  model_trainer.py  pipeline.py
training/unit_test/: test_label_generator.py
(+30 files in other folders)
