[project]
name = "crypto-bot"
version = "0.2.0"
description = "Multi-exchange crypto trading bot with clean architecture"
requires-python = ">=3.12"
dependencies = [
    # HTTP
    "httpx>=0.27.0",
    # Data
    "pandas>=2.2",
    "numpy>=1.26",
    # ML
    "lightgbm>=4.4",
    "joblib>=1.4",
    "scikit-learn>=1.5",
    "optuna>=3.6",
    # Technical indicators (TA-Lib C binding: for existing model inference)
    "ta-lib>=0.4",
    # pandas-ta: pure Python, used in retrain pipeline for new features
    "pandas-ta>=0.3.14b0",
    # Config
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "python-dotenv>=1.0",
    # Retry
    "tenacity>=8.5",
    # Logging
    "loguru>=0.7",
    # Historical data (Binance bootstrap)
    "yfinance>=0.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-mock>=3.14",
    "freezegun>=1.5",
    "respx>=0.21",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.scripts]
bot     = "bot.main:main"
retrain = "training.main:main"

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
python_version = "3.12"
strict = true
